# gnn-insider-threat

./: .gitignore  README.md  dvc.yaml  pyproject.toml
.dvc/: .gitignore  config
.github/workflows/: ci.yml
artifacts/baseline/lightning_logs/version_2/: hparams.yaml
configs/: chunks_manifest.json  config.yaml  paths.yaml  preprocessing.yaml  training.yaml
data/processed/r5.2/: all_features.parquet.dvc  graph_chunk_0.pt.dvc  graph_chunk_1.pt.dvc  graph_chunk_10.pt.dvc  graph_chunk_100.pt.dvc  graph_chunk_101.pt.dvc  graph_chunk_102.pt.dvc  graph_chunk_103.pt.dvc  graph_chunk_104.pt.dvc  graph_chunk_105.pt.dvc  graph_chunk_106.pt.dvc  graph_chunk_107.pt.dvc  graph_chunk_108.pt.dvc  graph_chunk_109.pt.dvc  graph_chunk_11.pt.dvc  graph_chunk_110.pt.dvc  graph_chunk_111.pt.dvc  graph_chunk_112.pt.dvc  graph_chunk_113.pt.dvc  graph_chunk_114.pt.dvc  graph_chunk_115.pt.dvc  graph_chunk_116.pt.dvc  graph_chunk_117.pt.dvc  graph_chunk_118.pt.dvc  graph_chunk_119.pt.dvc  graph_chunk_12.pt.dvc  graph_chunk_120.pt.dvc  graph_chunk_121.pt.dvc  graph_chunk_122.pt.dvc  graph_chunk_123.pt.dvc  graph_chunk_124.pt.dvc  graph_chunk_125.pt.dvc  graph_chunk_126.pt.dvc  graph_chunk_127.pt.dvc  graph_chunk_128.pt.dvc  graph_chunk_129.pt.dvc  graph_chunk_13.pt.dvc  graph_chunk_130.pt.dvc  graph_chunk_131.pt.dvc  graph_chunk_132.pt.dvc  (+348 more)
docs/: README.md  dataset-structure-report.md  project_overview.md
docs/adr/: 0001-training-stability-and-nan-mitigation.md  README.md
docs/experiments/: 2026-04-29-infra-tuning-gpu-utilization.md  README.md
docs/incidents/: 2026-04-29-nan-training-on-rtx3090.md
docs/notes/: target-fpr.md
notebooks/: eda.ipynb  graph_data_exploration.ipynb  graph_eda.ipynb
scripts/: lab_train.sh  slurm_train.sh  train.sh
src/: download_data.py
src/certgnn/: chunk_store.py  datamodule.py  download_data.py  duckdb_features.py  feature_extraction.py  lightning_model.py  losses.py  model.py  preprocess.py  preprocess_user_split.py  sampler.py  split.py  streaming_dataset.py  train.py  utils.py
src/certgnn/baseline/: __init__.py  data.py  lightning.py  split.py  test_baseline.py  train.py
src/certgnn/callbacks/: __init__.py  gpu_metrics.py
src/certgnn/data/: __init__.py  chunk_store.py  datamodule.py  sampler.py  streaming_dataset.py
src/certgnn/lightning/: __init__.py  anomaly_aware.py  base.py  binary_classifier.py  metrics.py
src/certgnn/models/: __init__.py  gcn_lstm.py  gcn_transformer.py  graph_pool_mlp.py
src/certgnn/preprocessing/: __init__.py  common.py  paper_faithful.py  user_level_split.py
tests/: test_data_loading.py  test_duckdb_features.py  test_loss_and_metrics.py  test_model.py  test_model_stability.py  test_real_data_duckdb.py  test_sampler.py  test_training_smoke.py
