[project]
name = "gnn-insider-threat"
version = "0.1.0"
description = "Deep Learning project for Insider Threat Detection using GCN and Bi-LSTM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    # torch is pinned to the cu121 stack: the lab RTX 3060 boxes run driver 535 /
    # CUDA 12.2, which cannot load cu124/cu126/cu13 builds. 2.5.1+cu121 ships
    # cuDNN 9 and is the version proven to run on both the lab and dev envs.
    "torch==2.5.1",
    "torch_geometric",
    "pytorch-lightning",
    "scikit-learn",
    "tqdm",
    "pyyaml",
    "requests",
    "matplotlib",
    "jupyter",
    "dvc[gdrive]",
    "loguru",
    "psutil",
    "duckdb>=1.5.2",
    "wandb>=0.25.1",
    "pytest-mock>=3.15.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
preprocess = "certgnn.preprocessing:main"
preprocess-paper-faithful = "certgnn.preprocessing.paper_faithful:main"
preprocess-user-split = "certgnn.preprocessing.user_level_split:main"
download-data = "certgnn.download_data:download_dataset"
train = "certgnn.train:main"

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/certgnn"]

[tool.ruff]
target-version = "py310"
line-length = 100
# Exploratory notebooks and the upstream reference code are not part of the
# linted deliverable.
extend-exclude = ["notebooks", "context"]

[tool.ruff.lint]
# Match ruff's default rule set explicitly so CI behaviour doesn't drift:
# pycodestyle errors (E4/E7/E9) + pyflakes (F).
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
