[project]
name = "gnn-insider-threat"
version = "0.1.0"
description = "Deep Learning project for Insider Threat Detection using GCN and Bi-LSTM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "torch",
    "torch_geometric",
    "torchvision>=0.26.0",
    "pytorch-lightning",
    "scikit-learn",
    "tqdm",
    "pyyaml",
    "requests",
    "matplotlib",
    "jupyter",
    "dvc[gdrive]",
    "loguru",
    "psutil",
    "duckdb>=1.5.2",
    "wandb>=0.25.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
# Enable with: uv sync --extra cuda  (NVIDIA). Default sync uses PyPI (CPU / Mac MPS).
cuda = [
    "torch",
    "torchvision>=0.26.0",
]

[project.scripts]
preprocess = "certgnn.preprocessing:main"
preprocess-paper-faithful = "certgnn.preprocessing.paper_faithful:main"
preprocess-user-split = "certgnn.preprocessing.user_level_split:main"
download-data = "certgnn.download_data:download_dataset"
train = "certgnn.train:main"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu126", extra = "cuda" }]
torchvision = [{ index = "pytorch-cu126", extra = "cuda" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/certgnn"]
